@@ -81,7 +81,10 @@ extern "C" {
 # define tempnam _tempnam
 #endif
 
+#if !defined(_MSC_VER) || (defined(_MSC_VER) && _MSC_VER < 1500)
 #define vsnprintf _vsnprintf 
+#endif
+
 #if defined(_MT) && defined(MSWINDOWS)
 #define SAFE_GLOBAL __declspec(thread)
 #else
