@@ -271,20 +271,20 @@ A.leftcolnav:VISITED  {
 <li><a class="reference" href="#rotate-90-up-to-134-faster" id="id19" name="id19">-rotate 90 (up to 134% faster)</a></li>
 </ul>
 </li>
+<li><a class="reference" href="#execution-overhead-results-3-2x-less-overhead" id="id20" name="id20">Execution Overhead Results (3.2X less overhead!)</a></li>
 </ul>
 </div>
-<p>On April 24, 2008, the first GraphicsMagick 1.2 beta was benchmarked
-against the most recent ImageMagick delivered by the FreeBSD Ports system
-at that time (ImageMagick 6.3.6). Testing was done on a dual-CPU Intel
-Xeon 2.4GHz system, with 2GB RAM and running FreeBSD 7.0. The software
-involved in the testing identified itself as:</p>
+<p>GraphicsMagick 1.2 has been benchmarked against the most recent
+ImageMagick delivered by the FreeBSD Ports system at that time
+(ImageMagick 6.3.6). Testing was done on a dual-CPU Intel Xeon 2.4GHz
+system, with 2GB RAM and running FreeBSD 7.0. The software involved is
+configured and compiled using similar options. The software involved in
+the testing identified itself as:</p>
 <pre class="literal-block">
-GraphicsMagick 1.2beta1 2008-04-23 Q16 http://www.GraphicsMagick.org/
+GraphicsMagick 1.2.1 2008-05-06 Q16 http://www.GraphicsMagick.org/
 
 ImageMagick 6.3.6 03/30/08 Q16 http://www.imagemagick.org
 </pre>
-<p>The '-type Optimize' option was added for the benchmark in order to
-ensure that both programs attempted to write smaller output.</p>
 <div class="section">
 <h1><a class="toc-backref" href="#id1" id="purpose" name="purpose">Purpose</a></h1>
 <p>The purpose of the benchmark was to measure the raw throughput of the
@@ -1691,6 +1691,88 @@ GraphicsMagick is typically 2X faster for this task.</p>
 </tr>
 </tbody>
 </table>
+</div>
+</div>
+<div class="section">
+<h1><a class="toc-backref" href="#id20" id="execution-overhead-results-3-2x-less-overhead" name="execution-overhead-results-3-2x-less-overhead">Execution Overhead Results (3.2X less overhead!)</a></h1>
+<p>It is common to execute GraphicsMagick and ImageMagick utilities in
+scripts. In this case, the utilities may be started over and over again
+for thousands of files. If the operation requested takes little time to
+execute then the time required to start the utility will dominate the
+time. In order to evaluate the execution overhead, this small script
+(&quot;bench&quot;):</p>
+<pre class="literal-block">
+#!/bin/bash
+i=1
+count=1000
+time while test $i -lt $count
+do
+  eval &quot;$&#64;&quot;
+  let i=i+1
+done
+</pre>
+<p>Is used to execute a specified command 1000 times and report the amount
+of time it took. For the purposes of this test, we take the 'rose' image
+which is included in GraphicsMagick and ImageMagick, write it to an input
+file, and then measure how long it takes to rotate it by 90 degrees and
+write to another file:</p>
+<pre class="literal-block">
+/usr/local/bin/gm convert magick:rose input.tiff
+./bench /usr/local/bin/convert input.tiff -rotate 90 output.tiff
+./bench /usr/local/bin/gm convert input.tiff -rotate 90 output.tiff
+</pre>
+<p>Which results in these timings for ImageMagick:</p>
+<blockquote>
+<table border="1" class="docutils">
+<colgroup>
+<col width="40%" />
+<col width="60%" />
+</colgroup>
+<thead valign="bottom">
+<tr><th class="head">Type</th>
+<th class="head">Time</th>
+</tr>
+</thead>
+<tbody valign="top">
+<tr><td>real</td>
+<td>1m53.885s</td>
+</tr>
+<tr><td>user</td>
+<td>1m30.421s</td>
+</tr>
+<tr><td>sys</td>
+<td>0m17.356s</td>
+</tr>
+</tbody>
+</table>
+</blockquote>
+<p>and these timings for GraphicsMagick:</p>
+<blockquote>
+<table border="1" class="docutils">
+<colgroup>
+<col width="40%" />
+<col width="60%" />
+</colgroup>
+<thead valign="bottom">
+<tr><th class="head">Type</th>
+<th class="head">Time</th>
+</tr>
+</thead>
+<tbody valign="top">
+<tr><td>real</td>
+<td>0m36.002s</td>
+</tr>
+<tr><td>user</td>
+<td>0m22.440s</td>
+</tr>
+<tr><td>sys</td>
+<td>0m12.008s</td>
+</tr>
+</tbody>
+</table>
+</blockquote>
+<p>From which it can be seen that GraphicsMagick has 3.2X less overhead than
+ImageMagick when executed on small files.</p>
 <hr class="docutils" />
 <div class="line-block">
 <div class="line">Copyright (C) 2008 GraphicsMagick Group</div>
@@ -1700,10 +1782,9 @@ Copyright.txt. You should have received a copy of Copyright.txt with this
 package; otherwise see <a class="reference" href="http://www.graphicsmagick.org/www/Copyright.html">http://www.graphicsmagick.org/www/Copyright.html</a>.</p>
 </div>
 </div>
-</div>
 <div class="footer">
 <hr class="footer" />
-Generated on: 2008-04-28 02:03 UTC.
+Generated on: 2008-05-07 18:23 UTC.
 
 </div>
 </body>
